# geo-analyzer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 001_initial.sql  002_llm_cache.sql  003_llm_summary.sql  004_users.sql  005_jobs_user_fk.sql  006_reset_tokens.sql
src/: main.rs  pdf.rs  worker.rs
src/analyzer/: llm.rs  mod.rs
src/crawler/: mod.rs
src/db/: mod.rs
src/handlers/: auth.rs  csrf.rs  mod.rs  password_reset.rs
src/models/: mod.rs
templates/: base.html  dashboard.html  forgot_password.html  index.html  login.html  page_detail.html  progress.html  register.html  reset_password.html
