[package]
name = "geo-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Templates
minijinja = { version = "2", features = ["loader"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# XML parsing
quick-xml = { version = "0.36", features = ["serialize"] }

# HTML parsing
scraper = "0.20"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
url = "2"
regex = "1"
once_cell = "1"
printpdf = "0.6"

# Autenticação
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
async-trait = "0.1"

# Gerenciamento de sessão persistente
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }

# Envio de e-mail (recuperação de senha)
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"], default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

